# poetry-kernel-bug

jupyter/: pyproject.toml
kernel_a/: kernel_a.ipynb  pyproject.toml
