[tool.poetry]
name = "kernel-a"
version = "0.1.0"
description = ""
authors = ["Drake Siard <drake.siard@xycapitalgroup.com>"]
readme = "README.md"
packages = [{include = "kernel_a"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.19.4"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
